--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <div class="cursor-dot" data-cursor-dot></div>
     <div class="cursor-outline" data-cursor-outline></div>
 
+    <div id="swish-text" class="swish-text" style="color: orange;">SWISH</div>
+    <div id="swish-text-faded1" class="swish-text-faded" style="color: rgba(255, 0, 0, 0.5);">SWISH</div>
+    <div id="swish-text-faded2" class="swish-text-faded" style="color: rgba(253, 158, 174, 0.5);">SWISH</div>
+
     <div class="container-profile">
         <div class="left-container">
             <div>
